# PGPT

./: CHANGELOG  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
logs/: pentestGPT_log_1718105846.032966.txt  pentestGPT_log_1718106059.7500942.txt
logs/comandos/: command_log_20240611-120051.json  command_log_20240611-120848.json  command_log_20240611-134020.json  result.txt
pentestgpt/: main.py
pentestgpt/config/: chat_config.py
pentestgpt/logs/comandos/: command_log_20240611-115258.json  command_log_20240611-121058.json  result.txt
pentestgpt/prompts/: prompt_class.py
pentestgpt/utils/: pentest_gpt.py  script_code_command.py  script_create_path.py  task_handler.py
pentestgpt/utils/APIs/: module_import.py
sspentestlab/: .gitignore  README.md  main.py  test_connection.py
sspentestlab/config/: chat_config.py
sspentestlab/prompts/: prompt_class.py
sspentestlab/scripts/: update.sh
sspentestlab/utils/: chatgpt.py  llm_api.py  prompt_select.py  report_generator.py  script_code_command.py  script_create_path.py  script_log_reader.py  spinner.py  sspentestlab_gpt.py  task_handler.py
sspentestlab/utils/APIs/: azure_api.py  chatgpt_api.py  gemini_api.py  gpt4all_api.py  langollama_api.py  module_import.py  rag_utils.py  titan_api.py
sspentestlab/utils/template/: template.docx
utils/: pentest_gpt.py  script_code_command.py  script_create_path.py  script_log_reader.py
