[tool.poetry]
name = "sspentestlab"
version = "0.14.0"
description = "SSPentestLab is an LLM-powered penetration testing tool."
authors = ["Ali Vafaev <ali.vafaev@soprasteria.com>", "Tomas Bastante <tomas.bastante@soprasteria.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
sqlmap = "^1.8.3"
black = "^24.3.0"
loguru = "^0.7.2"
colorama = "^0.4.6"
rich = "^13.7.1"
prompt-toolkit = "^3.0.43"
google = "^3.0.0"
pytest = "^8.1.1"
openai = "^1.51.0"
langchain = "^0.3.17"
tiktoken = "^0.6.0"
pycookiecheat = "^0.6.0"
tenacity = "^8.2.3"
gpt4all = "^2.6.0"
pinecone-client = "^3.2.2"
langfuse = "^1.9.2"
newspaper3k = "^0.2.8"
google-generativeai = "^0.5.3"
toml = "^0.10.2"
docx = "0.2.4"
docx2pdf = "0.1.8"
python-docx = "1.1.2"
llama-index = "0.12.1"
langchain_ollama = "0.2.0"
llama-index-llms-langchain = "0.5.0"
langchain-huggingface = "0.1.2"
langchain-text-splitters = "0.3.2"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
pydantic_core = "2.23.4"
langchain-core = "0.3.17"
langhchain = "0.3.7"
langchain-community = "0.3.7"
llama_cpp_python = "0.3.1"

[tool.poetry.scripts]
sspentestlab="sspentestlab.main:main"
sspentestlab-connection="sspentestlab.test_connection:main"
sspentestlab-cookie="sspentestlab.extract_cookie:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
